Atualização do cadastra-se

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
             <div class="login-grupo btn">
                 <button type="submit">Entrar</button>
             </div>
+            <div class="Esquecer"><br>
+                <span><a href="http://google.com.br" target="_blank">Esqueci a Senha</a></span>
+            </div>
+            <div class="Cadastrar"><br>
+                <span><a href="http://google.com.br" target="_blank">Cadastrar-se</a></span>
+            </div>
         </div>
     </form>
     
