--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login Realoca+</title>
     <link rel="stylesheet" href="realoca.css">
 </head>
+
 <body>
     <form class="login" action="">
         <div class="container">
@@ -29,14 +31,15 @@
             <div class="login-grupo btn">
                 <button type="submit">Entrar</button>
             </div>
-            <div class="Esquecer"><br>
+            <div id="ops" class="Esquecer"><br>
                 <span><a href="http://google.com.br" target="_blank">Esqueci a Senha</a></span>
             </div>
-            <div class="Cadastrar"><br>
+            <div id="ops" class="Cadastrar"><br>
                 <span><a href="http://google.com.br" target="_blank">Cadastrar-se</a></span>
             </div>
         </div>
     </form>
-    
+
 </body>
+
 </html>
